add listpay for swagger
